OneByteCompressor, some fixes